--- a/breakpoint/Base.lproj/Main.storyboard
+++ b/breakpoint/Base.lproj/Main.storyboard
@@ -65,7 +65,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="cFa-Pj-Cgq" id="I7l-6H-9kn">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -109,7 +109,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rGN-TC-rLx" id="uiQ-a8-BPg">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -200,6 +200,9 @@
                                         <state key="normal" title=" by email" image="emailIcon">
                                             <color key="titleColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="signInWithEmailBtnWasPressed:" destination="zI6-cY-tqX" eventType="touchUpInside" id="tUf-tQ-cfQ"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="DcV-v7-Cht">
                                         <rect key="frame" x="20" y="20" width="303" height="268"/>
@@ -214,11 +217,17 @@
                                                 <rect key="frame" x="0.0" y="69.5" width="303" height="59.5"/>
                                                 <color key="backgroundColor" red="0.2627450980392157" green="0.35686274509803922" blue="0.56862745098039214" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="LOGIN WITH FB"/>
+                                                <connections>
+                                                    <action selector="facebookSignInWasPressed:" destination="zI6-cY-tqX" eventType="touchUpInside" id="1MP-Cv-DJj"/>
+                                                </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Lm-Zq-En7">
                                                 <rect key="frame" x="0.0" y="139" width="303" height="59.5"/>
                                                 <color key="backgroundColor" red="0.80784313725490198" green="0.32941176470588235" blue="0.23921568627450979" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <state key="normal" title="LOGIN WITH G+"/>
+                                                <connections>
+                                                    <action selector="googleSignInWasPressed:" destination="zI6-cY-tqX" eventType="touchUpInside" id="jWz-JI-Jaw"/>
+                                                </connections>
                                             </button>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OR" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zXW-Yf-MjY">
                                                 <rect key="frame" x="0.0" y="208.5" width="303" height="59.5"/>
@@ -279,6 +288,9 @@
                                     <constraint firstAttribute="height" constant="30" id="lsq-cs-Eu0"/>
                                 </constraints>
                                 <state key="normal" image="close"/>
+                                <connections>
+                                    <action selector="closeBtnWasPressed:" destination="j40-cA-m2V" eventType="touchUpInside" id="oFc-Rr-Vcr"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i1S-C4-xoZ">
                                 <rect key="frame" x="147.5" y="259" width="80" height="33"/>
@@ -289,6 +301,9 @@
                                 <state key="normal" title="SIGN IN">
                                     <color key="titleColor" red="0.015686274510000001" green="0.6705882353" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="siginInWasPressed:" destination="j40-cA-m2V" eventType="touchUpInside" id="3wU-Dy-0uc"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="eJV-fj-F5C">
                                 <rect key="frame" x="36" y="78" width="303" height="161"/>
@@ -333,6 +348,10 @@
                             <constraint firstItem="eJV-fj-F5C" firstAttribute="top" secondItem="e4a-Gi-bUK" secondAttribute="bottom" constant="20" id="cWv-9Z-2Ut"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailField" destination="DUJ-b2-awh" id="RZf-0w-7Oi"/>
+                        <outlet property="passwordField" destination="ATz-la-yF2" id="nUd-Tc-7zJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0zi-B5-wzA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
